--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,12 +12,13 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
   <body>
-    <main class="min-h-screen font-SpaceGrotesk">
+    <main
+      class="flex flex-col text-lg text-white md:flex-row font-SpaceGrotesk">
       <slot />
     </main>
   </body>
@@ -26,5 +27,16 @@ const { title } = Astro.props;
   @font-face {
     font-family: "Space-Grotesk";
     src: url(../assets/fonts/SpaceGrotesk-VariableFont_wght.ttf);
+  }
+  .border-inp {
+    &:focus {
+      border-image: linear-gradient(
+        to right,
+        hsl(249, 99%, 64%),
+        hsl(278, 94%, 30%)
+      );
+      border-image-slice: 1;
+    }
+    border-radius: 0.375rem;
   }
 </style>
