--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,84 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
+import InputStyle from "@components/InputStyle.astro";
+import TitleInput from "@/components/TitleInput.astro";
+import Header from "@/components/Header.astro";
 ---
 
-<Layout title="Blog">
-  <div class="">
-    <img src="" alt="" />
-  </div>
+<Layout title="Card Interactive">
+  <Header />
+  <form id="form" class="grid w-full px-5 pt-20 place-items-center md:h-screen">
+    <div class="mx-auto md:w-80">
+      <div>
+        <TitleInput title="CARDHOLDER NAME" />
+        <InputStyle
+          placeholder="e.g. Jane Appleseed"
+          limit={20}
+          id="cardName"
+        />
+      </div>
+      <div>
+        <TitleInput title="CARD NUMBER" />
+        <InputStyle
+          placeholder="e.g. 1234 5678 9123 0000"
+          limit={19}
+          id="cardNumber"
+        />
+      </div>
+
+      <div class="flex items-center gap-4 w-100">
+        <div class="flex-1">
+          <TitleInput title="EXP.DATE (MM/YY)" />
+
+          <div class="flex gap-2">
+            <div><InputStyle placeholder="MM" limit={2} id="month" /></div>
+            <div>
+              <InputStyle placeholder="YY" limit={2} id="year" />
+            </div>
+          </div>
+        </div>
+        <div class="flex-1">
+          <TitleInput title="CVC" />
+          <InputStyle placeholder="e.g. 123" limit={3} id="cvc" />
+        </div>
+      </div>
+      <button
+        class="w-full py-3 my-8 rounded-lg hover:contrast-150 bg-very-dark-violet"
+        >Confirm</button
+      >
+    </div>
+  </form>
 </Layout>
-<style>
-  .border-gradiente {
-    border-image: linear-gradient(
-      to right,
-      hsl(249, 99%, 64%),
-      hsl(278, 94%, 30%)
-    );
-    border-image-slice: 44;
+<script>
+  const form = document.getElementById("form");
+  const cardName = document.getElementById("cardName");
+  const cardNumber = document.getElementById("cardNumber");
+  const month = document.getElementById("month");
+  const year = document.getElementById("year");
+  const cvc = document.getElementById("cvc");
+
+  cardNumber?.addEventListener("input", (e: any) => {
+    const numberTarjed = document.getElementById("numberTarjed");
+    const value = e.target.value;
+    const formattedValue = value.replace(/\D/g, "").replace(/(\d{4})/g, "$1 ");
+    e.target.value = formattedValue;
+    numberTarjed.innerText = formattedValue;
+  });
+
+  insertCard(cardName, nameTarjed);
+  insertCard(month, cardMonth);
+  insertCard(year, cardYear);
+  insertCard(cvc, cardCvc);
+
+  form?.addEventListener("submit", (e) => {
+    e.preventDefault();
+  });
+
+  function insertCard(input, cardcontent) {
+    input?.addEventListener("input", (e: any) => {
+      const nameTarjed = document.getElementById("nameTarjed");
+      const value = e.target.value;
+      cardcontent.innerText = value;
+    });
   }
-</style>
+</script>
