--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,16 +1,23 @@
 ---
 import cardFront from "@images/bg-card-front.png";
 import cardBack from "@images/bg-card-back.png";
+import bgMobile from "@images/bg-main-mobile.png";
+import bgDesktop from "@images/bg-main-desktop.png";
 ---
 
 <div
-  class="grid w-full mb-5 bg-no-repeat bg-cover md:mb-0 place-items-center md:place-content-center h-60 bg-movile md:bg-desktop md:w-80 md:h-screen">
+  class="grid w-full mb-5 md:mb-0 place-items-center md:place-content-center h-60 md:w-80 md:h-screen relative">
+  <img src={bgMobile.src} alt="" class="md:hidden absolute w-full h-full" />
+  <img
+    src={bgDesktop.src}
+    alt=""
+    class="hidden md:block absolute top-0 left-0 -z-20 h-full"
+  />
   <div
     class="relative translate-x-6 translate-y-10 w-72 md:translate-y-5 md:translate-x-36">
     <img src={cardBack.src} alt="" />
     <span class="absolute text-xs top-[4.3rem] right-9" id="cardCvc">000</span>
   </div>
-
   <div
     class="relative -translate-x-8 -translate-y-6 w-72 md:-order-1 md:translate-y-0 md:translate-x-24">
     <img src={cardFront.src} alt="" />
