--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,7 +33,7 @@ import bgDesktop from "@images/bg-main-desktop.png";
         </div>
         <div class="flex justify-between text-xs">
           <p class="uppercase" id="nameTarjed">JANE APPLESEED</p>
-          <p><span id="cardMonth">00</span>/<span id="cardYear">00</span></p>
+          <p><span id="cardMounth">00</span>/<span id="cardYears">00</span></p>
         </div>
       </div>
     </div>
