--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,6 +37,8 @@ const { title } = Astro.props;
       );
       border-image-slice: 1;
     }
-    border-radius: 0.375rem;
+  }
+  .invalid {
+    border-color: red;
   }
 </style>
